# fastapi_full

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  run.sh  servers.json
app/: alembic.ini.F  database.py  main.py  models.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: de5a4949129d_first_migration.py
app/api/: deps.py  main.py
app/api/routes/: login.py  posts.py  users.py  votes.py
app/core/: config.py  db.py  security.py
app/crud/: user.py
app/models/: post.py  user.py  vote.py
app/schemas/: posts.py  users.py  votes.py
scripts/: create_posts.sql  db-setup copy.sh  db-setup.sh
tests/: conftest copy.py  conftest.py  const.py
tests/api/: test__main.py  test__users.py
tests/unit/: test_main.py  test_test.py
tests/utils/: database_utils.py  docker.py
